--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Blog de 5rev
-email: your-email@example.com
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Sitio desarrollado por 5r3v como muestra de un blog web. Este sitio
   solo es una prueba y no intenta lucrarse de ninguna forma. Aunque si
@@ -28,7 +28,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description."""
-baseurl: "/blog5r3v" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Visdo92
 github_username:  sdrev
