--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Blog de 5rev
+title: Blog de 5r3v
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Sitio desarrollado por 5r3v como muestra de un blog web. Este sitio
@@ -28,7 +28,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description."""
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/blog5r3v" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Visdo92
 github_username:  sdrev
